force-app/main/default/objects/AccountContactRelation/AccountContactRelation.object-meta.xml
<CustomObject>
</CustomObject>