force-app/main/default/objects/AccountContactRelation/fields/OctopusMoneyRecord__c.field-meta.xml
<CustomField>
    <fullName>OctopusMoneyRecord__c</fullName>
    <description>This needs to look at the related household to determine if this applies to OM</description>
    <formula>IF(NOT(ISBLANK(Account.OctopusMoneyRecord__c)) &amp;&amp; Account.RecordType.DeveloperName = &#39;IndustriesHousehold&#39;, CASESAFEID( AccountId), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OM Record</label>
    <type>Text</type>
</CustomField>