force-app/main/default/objects/AccountContactRelation/fields/PlatformId__c.field-meta.xml
<CustomField>
    <fullName>PlatformId__c</fullName>
    <description>ID of relationship on platform</description>
    <externalId>true</externalId>
    <label>Platform ID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>