force-app/main/default/objects/AccountContactRelation/validationRules/AdviceHouseholdAcceptedRoles.validationRule-meta.xml
<ValidationRule>
    <fullName>AdviceHouseholdAcceptedRoles</fullName>
    <active>true</active>
    <description>Ensures that only certain roles can be recorded in a household.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
Account.RecordType.DeveloperName = &quot;IndustriesHousehold&quot; 
&amp;&amp;
NOT( ISPICKVAL( Account.Type, &quot;Mortgage only&quot; )) 
&amp;&amp;
NOT( ISPICKVAL( Account.Type, &quot;Trust&quot; )) 
&amp;&amp;
NOT(INCLUDES(Roles, &quot;Client&quot;) 
||
INCLUDES(Roles, &quot;Child&quot;) 
||
INCLUDES(Roles, &quot;Other Important Family Member&quot;) 
||
INCLUDES(Roles, &quot;Deceased Client&quot;) )</errorConditionFormula>
    <errorDisplayField>Roles</errorDisplayField>
    <errorMessage>The role in a household must be client, child, other important family member, trust, or deceased client.</errorMessage>
</ValidationRule>