force-app/main/default/objects/AccountContactRelation/validationRules/BusinessAcceptedRoles.validationRule-meta.xml
<ValidationRule>
    <fullName>BusinessAcceptedRoles</fullName>
    <active>true</active>
    <description>Lists which roles can be chosen where the account is a business.</description>
    <errorConditionFormula>Account.RecordType.DeveloperName = &quot;OW_business&quot; &amp;&amp;
NOT(INCLUDES(Roles, &quot;Employee&quot;))</errorConditionFormula>
    <errorDisplayField>Roles</errorDisplayField>
    <errorMessage>Only the employee role can be used where the account is a business.</errorMessage>
</ValidationRule>