force-app/main/default/objects/AccountContactRelation/validationRules/DeceasedAcceptedRoles.validationRule-meta.xml
<ValidationRule>
    <fullName>DeceasedAcceptedRoles</fullName>
    <active>true</active>
    <description>Role cannot change to deceased if related contact status is not deceased</description>
    <errorConditionFormula>INCLUDES(Roles, &quot;Deceased Client&quot;)
&amp;&amp; 
NOT(ISPICKVAL(Contact.Account.FinServ__Status__c, &quot;Deceased&quot;))</errorConditionFormula>
    <errorDisplayField>Roles</errorDisplayField>
    <errorMessage>You can only choose a deceased client role when the client has the status of deceased, which happens as part of the deceased case workflow.</errorMessage>
</ValidationRule>