force-app/main/default/objects/AccountContactRelation/validationRules/OW_household_accepted_roles.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_household_accepted_roles</fullName>
    <active>true</active>
    <description>Ensures that only certain roles can be recorded in a household.</description>
    <errorConditionFormula>CASESAFEID( Account.RecordTypeId ) = $CustomMetadata.OW_record_type_reference__mdt.OW_account_household.OW_record_type_id__c

&amp;&amp;

NOT( ISPICKVAL( Account.Type, &quot;Mortgage only&quot; ))

&amp;&amp;

NOT(
INCLUDES(Roles, &quot;Client&quot;) ||
INCLUDES(Roles, &quot;Child&quot;) ||
INCLUDES(Roles, &quot;Other Important Family Member&quot;) ||
INCLUDES(Roles, &quot;Trust&quot;) ||
INCLUDES(Roles, &quot;Deceased Client&quot;) )</errorConditionFormula>
    <errorDisplayField>Roles</errorDisplayField>
    <errorMessage>The role in a household must be client, child, other important family member, trust, or deceased client.</errorMessage>
</ValidationRule>