force-app/main/default/objects/AccountContactRelation/validationRules/OW_household_mortgage_accepted_roles.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_household_mortgage_accepted_roles</fullName>
    <active>true</active>
    <description>Ensures that only certain roles can be recorded in a household where the type is mortgage only.</description>
    <errorConditionFormula>CASESAFEID( Account.RecordTypeId ) = $CustomMetadata.OW_record_type_reference__mdt.OW_account_household.OW_record_type_id__c

&amp;&amp;

ISPICKVAL( Account.Type, &quot;Mortgage only&quot; )

&amp;&amp;

NOT(INCLUDES(Roles, &quot;Mortgage borrower&quot;))</errorConditionFormula>
    <errorDisplayField>Roles</errorDisplayField>
    <errorMessage>The role in a household marked as mortgage only must be mortgage borrower.</errorMessage>
</ValidationRule>