force-app/main/default/objects/AccountContactRelation/validationRules/OW_primary_group_required.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_primary_group_required</fullName>
    <active>true</active>
    <description>Ensures primary group is true for a client unless the household is inactive.</description>
    <errorConditionFormula>FinServ__PrimaryGroup__c = false
&amp;&amp;
INCLUDES( Roles, &quot;Client&quot;)
&amp;&amp; 
NOT( ISPICKVAL( Account.FinServ__Status__c, &quot;Inactive&quot; ))
&amp;&amp;
NOT( ISPICKVAL( Account.FinServ__Status__c, &quot;Split&quot; ))</errorConditionFormula>
    <errorDisplayField>Roles</errorDisplayField>
    <errorMessage>To have a role of client in a household, primary group must be true. Please choose another role or mark primary group as false.</errorMessage>
</ValidationRule>