force-app/main/default/objects/AccountContactRelation/validationRules/OW_primary_member_roles.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_primary_member_roles</fullName>
    <active>true</active>
    <description>Ensures that only certain roles can be specified as primary member</description>
    <errorConditionFormula>FinServ__Primary__c = true

&amp;&amp;

NOT(INCLUDES( Roles, &quot;Client&quot;) ||
INCLUDES( Roles, &quot;Mortgage borrower&quot;))</errorConditionFormula>
    <errorDisplayField>Roles</errorDisplayField>
    <errorMessage>A primary member can only be a client or mortgage borrower</errorMessage>
</ValidationRule>