force-app/main/default/objects/AccountContactRelation/validationRules/OW_role_one_only.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_role_one_only</fullName>
    <active>true</active>
    <description>Ensures that only one role is chosen.</description>
    <errorConditionFormula>(IF(INCLUDES(Roles, &quot;Client&quot;),1,0) +  
IF(INCLUDES(Roles, &quot;Child&quot;),1,0) +  
IF(INCLUDES(Roles, &quot;Other important family member&quot;),1,0) +  
IF(INCLUDES(Roles, &quot;Trust&quot;),1,0) +  
IF(INCLUDES(Roles, &quot;Employee&quot;),1,0) +  
IF(INCLUDES(Roles, &quot;Mortgage borrower&quot;),1,0) +
IF(INCLUDES(Roles, &quot;Deceased Client&quot;),1,0)) &gt; 1</errorConditionFormula>
    <errorDisplayField>Roles</errorDisplayField>
    <errorMessage>Only one role can be chosen.</errorMessage>
</ValidationRule>