force-app/main/default/objects/AccountContactRelation/validationRules/RoleOneOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>RoleOneOnly</fullName>
    <active>true</active>
    <description>Ensures that only one role is chosen for a non-trust household.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp;
NOT( ISPICKVAL( Account.Type, &quot;Trust&quot; )) &amp;&amp;
((IF(INCLUDES(Roles, &quot;Client&quot;),1,0) +  
IF(INCLUDES(Roles, &quot;Child&quot;),1,0) +  
IF(INCLUDES(Roles, &quot;Other important family member&quot;),1,0) +  
IF(INCLUDES(Roles, &quot;Trust&quot;),1,0) +  
IF(INCLUDES(Roles, &quot;Employee&quot;),1,0) +  
IF(INCLUDES(Roles, &quot;Mortgage borrower&quot;),1,0) +
IF(INCLUDES(Roles, &quot;Deceased Client&quot;),1,0)) &gt; 1)</errorConditionFormula>
    <errorDisplayField>Roles</errorDisplayField>
    <errorMessage>Only one role can be chosen.</errorMessage>
</ValidationRule>