force-app/main/default/objects/AccountContactRelation/validationRules/RoleRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>RoleRequired</fullName>
    <active>true</active>
    <description>Ensures that a role is recorded.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
ISBLANK(Roles)</errorConditionFormula>
    <errorDisplayField>Roles</errorDisplayField>
    <errorMessage>A role is required</errorMessage>
</ValidationRule>