force-app/main/default/objects/AccountContactRelation/validationRules/TrustAcceptedRoles.validationRule-meta.xml
<ValidationRule>
    <fullName>trustAcceptedRoles</fullName>
    <active>true</active>
    <description>Ensures that only certain roles can be recorded in a household where the type is mortgage only.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
Account.RecordType.DeveloperName = &quot;IndustriesHousehold&quot; 
&amp;&amp;
ISPICKVAL(Account.Type, &quot;Trust&quot;)
&amp;&amp;
NOT(INCLUDES(Roles, &quot;Settlor&quot;) ||
INCLUDES(Roles, &quot;Trustee&quot;) ||
INCLUDES(Roles, &quot;Beneficiary&quot;))</errorConditionFormula>
    <errorDisplayField>Roles</errorDisplayField>
    <errorMessage>In a trust, role must be settlor, trustee, and/or beneficiary.</errorMessage>
</ValidationRule>